@@ -1,18 +1,45 @@
 {
-  "timestamp" : "2023-10-27T08:07:42Z",
-  "count_outdated" : 214,
-  "uniques_outdated" : 150,
-  "count" : 215,
-  "uniques" : 151,
+  "timestamp" : "2024-01-07T08:07:35Z",
+  "count_outdated" : 215,
+  "uniques_outdated" : 151,
+  "count" : 222,
+  "uniques" : 157,
   "clones" : [
     {
-      "timestamp": "2023-10-20T00:00:00Z",
+      "timestamp": "2023-12-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-12-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-01T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-07T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 3,
+      "uniques_minmax": [ 3, 3 ],
+      "uniques_decinc": [ 0, 3 ]
     }
   ]
 }
