@@ -1,11 +1,26 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 7,
+  "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-10-20T00:00:00Z",
+      "timestamp": "2023-12-25T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-12-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-01T00:00:00Z",
+      "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-07T00:00:00Z",
+      "count": 3,
+      "uniques": 3
     }
   ]
 }
